[UXP task] layout\base\nsLayoutUtils.cpp

WARNING: Image width or height is non-positive: file
[drive]:\[path]\layout\base\nsLayoutUtils.cpp, line 6045
https://bugzilla.mozilla.org/show_bug.cgi?id=1317464